# MViz

./: CMakeLists.txt  README.md  guide.md
include/core/: Application.h  Camera.h  SceneManager.h  TFManager.h
include/data/: DataTypes.h
include/rendering/: Renderer.h  Shader.h  TextRenderer.h
include/ui/: UIManager.h
include/visualization/: PointCloudVisual.h
shaders/: basic.frag  basic.vert  point_cloud.frag  point_cloud.vert  text.vert
src/: main.cpp
src/core/: Application.cpp  Camera.cpp  SceneManager.cpp  TFManager.cpp
src/rendering/: Renderer.cpp  Shader.cpp  TextRenderer.cpp
src/ui/: UIManager.cpp
src/visualization/: PointCloudVisual.cpp
